# the-raytracer-challenge

./: .gitignore  CMakeLists.txt  main.c
src/: canvas.c  canvas.h  color.h  ppmWriter.c  ppmWriter.h
src/filewriter/: bmpWriter.c  bmpWriter.h  ppmWriter.c  ppmWriter.h
src/helper/: defines.h  floatingpoint.h  matrix.c  matrix.h  tuple.c  tuple.h
test/: unity.h
test/src/: testTuple.c
test/test_runner/: matrix_test_runner.c  tuple_test_runner.c
test/tests/: matrixTest.c  testTuple.c
